--- a/backend/.env
+++ b/backend/.env
@@ -12,3 +12,13 @@ NODE_ENV=production
 # Performance Settings
 MAX_CONCURRENT_SCRAPES=50
 REQUEST_TIMEOUT=30000
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are NOT automatically loaded by Prisma.
+# Please add `import "dotenv/config";` to your `prisma.config.ts` file, or use the Prisma CLI with Bun
+# to load environment variables from .env files: https://pris.ly/prisma-config-env-vars.
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://thien@localhost:5432/media_scraper?schema=public"
