--- a/backend/.env
+++ b/backend/.env
@@ -21,4 +21,4 @@ REQUEST_TIMEOUT=30000
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://thien@localhost:5432/media_scraper?schema=public"
+DATABASE_URL="postgres://scraper_user:scraper_pass@postgres:5432/media_scraper"
