--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-main": "vite-node main.ts",
     "start-worker": "vite-node worker.ts",
-    "start": "npm run start-main & npm run start-worker",
+    "start": "npm run start-main & npm run start-worker"
   },
   "keywords": [],
   "author": "",
